# qgrep

./: .gitignore  Pipfile  README  README.rst  basis.py  check_convergence.py  check_type.py  checklist_convergence.py  contextmanagers.py  convert_zmatrix.py  coordinate_converter.py  coords.py  curve_fit.py  energy_levels.py  gamess.py  gamessifier.py  gen_smiles.py  getGeom.py  get_energy.py  get_freqs.py  get_geom.py  helper.py  improvements.rst  matplotlib_latexing.py  molecule.py  molpro.py  myiter.py  orca.py  parse_cfour_vpt2.py  plot.py  plot_csv  plot_csv.py  psi4.py  qchem.py  setup.cfg  string_editing.zsh  template.py
qgrep/: atom.py  bagel.py  basis.py  cfour.py  convergence.py  coordinate_converter.py  energy_levels.py  gamess.py  gaussian.py  helper.py  maestro.py  mbo.py  molecule.py  molpro.py  nbo.py  nics.py  orca.py  psi4.py  qchem.py  queues.py  redundant.py  spectra.py
qgrep/orbs/: draw.py
qgrep/population/: nbo.py  orbital_pop.py
rdkit/: functions.py
tests/: basisset_unittest.py  def2-svp.molpro  energy_levels_unittest.py  gamessifier_unittest.py  geom.mae  geom.xyz  geom.zmat  helper_unittest.py  maestro_unittest.py  molecule_unittest.py  nics_unittest.py  spectra_unittest.py
tests/cfour/: cfour_unittest.py  h2o.ZMAT  h2o.out  h2o.xyz  h2o.xyz.bohr
tests/gamess/: CH2_opt.check  CH2_opt.inp  CH2_opt.out  gamess_unittest.py  gamessifier_unittest.py
tests/nbo/: H2O.nbo  nbo_unittest.py
tests/orca/: Benzene_freqs.freqs  Benzene_freqs.inp  Benzene_freqs.out  CH3F_Cl_scan.bohr.xyz  CH3F_Cl_scan.bohr.zmat  CH3F_Cl_scan.check  geom.xyz  (+9 more)
(+5 files in other folders)
