[metadata]
name = QGrep
description = Random collection of scripts for quantum chemistry
author = Jonathon Vandezande
version = 0.1.0
url = https://github.com/jevandezande/qgrep
long_description = file: README.md
license = MIT
license_file = LICENSE
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = qgrep
python_requires = >= 3.9
test_suite = tests/
scripts = 
    check
    convert_basis
    convert_zmatrix
    coords
    density_of_states
    energy_levels
    energy_progress
    eq_mol
    geom_bagel
    get_energy
    get_freqs
    get_geom
    inup
    molecule
    mo_pop
    mp2_no
    nics
    plot
    qinfo
    quick_opt
    spectra
    stability
    template

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 100

[mypy]
files = qgrep,test
ignore_missing_imports = true

[flake8]
ignore = E203, E266, E501, W503, E731
max-line-length = 100
max-complexity = 18
select = B,C,E,F,W,T4

[pylint]
max-line-length=100

[pylint:messages_control]
disable = C0330, C0326

[tool:pytest]
testpaths = test/
